--- a/templates/commande_back/_form.html.twig
+++ b/templates/commande_back/_form.html.twig
@@ -1,7 +1,8 @@
-{{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+{{ form_start(form, {'attr': {'class': 'form-horizontal', 'novalidate': 'novalidate'}}) }}
 
 <div class="form-group">
-    {{ form_label(form.idUser, 'ID User', {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+   <!-- {{ form_label(form.idUser, 'ID User', {'label_attr': {'class': 'col-sm-2 control-label'}}) }} -->
+   <label for="inputText" class="control-label col-md-2">ID User</label>
     <div class="col-sm-10">
         {{ form_widget(form.idUser, {'attr': {'class': 'form-control'}}) }}
         {{ form_errors(form.idUser) }} {# Add this line to display error messages #}
@@ -9,7 +10,8 @@
 </div>
 
 <div class="form-group">
-    {{ form_label(form.idProduit, 'ID Produit', {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+  <!--  {{ form_label(form.idProduit, 'ID Produit', {'label_attr': {'class': 'col-sm-2 control-label'}}) }} -->
+  <label for="inputText" class="control-label col-md-2">ID Produit</label>
     <div class="col-sm-10">
         {{ form_widget(form.idProduit, {'attr': {'class': 'form-control'}}) }}
         {{ form_errors(form.idProduit) }} {# Add this line to display error messages #}
@@ -17,15 +19,17 @@
 </div>
 
 <div class="form-group">
-    {{ form_label(form.quantity, 'Quantity', {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+  <!--  {{ form_label(form.quantity, 'Quantity', {'label_attr': {'class': 'col-sm-2 control-label'}}) }} -->
+  <label for="inputText" class="control-label col-md-2">Quantity</label>
     <div class="col-sm-10">
         {{ form_widget(form.quantity, {'attr': {'class': 'form-control'}}) }}
-        {{ form_errors(form.quantity) }} {# Add this line to display error messages #}
+        {{ form_errors(form.quantity, {'attr': {'class': 'text-danger'}}) }} 
     </div>
 </div>
 
 <div class="form-group">
-    {{ form_label(form.datecreation, 'Date Creation', {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+   <!-- {{ form_label(form.datecreation, 'Date Creation', {'label_attr': {'class': 'col-sm-2 control-label'}}) }} -->
+   <label for="inputText" class="control-label col-md-2">Date Creation</label>
     <div class="col-sm-10">
         {{ form_widget(form.datecreation, {'attr': {'class': 'form-control'}}) }}
         {{ form_errors(form.datecreation) }} {# Add this line to display error messages #}
