--- a/templates/produit_back/_form.html.twig
+++ b/templates/produit_back/_form.html.twig
@@ -1,30 +1,35 @@
 {{ form_start(form) }}
     <div class="form-group">
-        {{ form_label(form.nom, 'Name', {'label_attr': {'class': 'control-label col-md-2'}}) }}
+    {{ form_start(form, {'attr': {'class': 'form-horizontal', 'novalidate': 'novalidate'}}) }}
+     
+        <label for="inputText" class="control-label col-md-2">Nom</label> 
         <div class="col-md-10">
             {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.nom) }}
+            {{ form_errors(form.nom, {'attr': {'class': 'text-danger'}}) }}
         </div>
     </div>
     <div class="form-group">
-        {{ form_label(form.imagefile, 'Image File', {'label_attr': {'class': 'control-label col-md-2'}}) }}
+      <!--  {{ form_label(form.imagefile, 'Image File', {'label_attr': {'class': 'control-label col-md-2'}}) }}-->
+      <label for="inputText" class="control-label col-md-2">Image File</label>
         <div class="col-md-10">
             {{ form_widget(form.imagefile, {'attr': {'class': 'form-control-file'}}) }}
             {{ form_errors(form.imagefile) }}
         </div>
     </div>
     <div class="form-group">
-        {{ form_label(form.prix, 'Price', {'label_attr': {'class': 'control-label col-md-2'}}) }}
+       <!--  {{ form_label(form.prix, 'Price', {'label_attr': {'class': 'control-label col-md-2'}}) }} -->
+       <label for="inputText" class="control-label col-md-2">Price</label>
         <div class="col-md-10">
             {{ form_widget(form.prix, {'attr': {'class': 'form-control'}}) }}
             {{ form_errors(form.prix) }}
         </div>
     </div>
     <div class="form-group">
-        {{ form_label(form.categorie, 'Category', {'label_attr': {'class': 'control-label col-md-2'}}) }}
+        <!--{{ form_label(form.categorie, 'Category', {'label_attr': {'class': 'control-label col-md-2'}}) }} -->
+        <label for="inputText" class="control-label col-md-2">Category</label>
         <div class="col-md-10">
             {{ form_widget(form.categorie, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.categorie) }}
+            {{ form_errors(form.categorie, {'attr': {'class': 'text-danger'}}) }}
         </div>
     </div>
     <div class="form-group">
